2-tenant-workloads/demo-tenant/demo-tenant-gitops-repo/apps/demo-python-app/rendered-manifests/httproute.yaml
# Source: demo-python-app/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-python-app
  labels:
    helm.sh/chart: demo-python-app-0.1.0
    app.kubernetes.io/name: demo-python-app
    app.kubernetes.io/instance: demo-python-app
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    team: demo-tenant
spec:
  parentRefs:
    - name: platform-gateway
      namespace: traefik
  hostnames:
    - demo-python-app.demo-tenant.localhost
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: demo-python-app
          port: 8080
          weight: 1
