2-tenant-workloads/demo-tenant/demo-tenant-gitops-repo/apps/demo-python-app/rendered-manifests/ingress.yaml
# Source: demo-python-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-python-app
  labels:
    helm.sh/chart: demo-python-app-0.1.0
    app.kubernetes.io/name: demo-python-app
    app.kubernetes.io/instance: demo-python-app
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
    team: demo-tenant
spec:
  ingressClassName: traefik
  rules:
    - host: "demo-python-app.demo-tenant.localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-python-app
                port:
                  number: 8080
